2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: swapped search wrap
	  messages.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/GotoLineNumberWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Improved search (user
	  recognizes if pattern is not found). Set some status bar messages.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 363983 -
	  Tooltip does not hide when goto dialog shows.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: toolbox drag from now works.

2008-02-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Properly check if the
	  editor was the last focused widget.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Changed clipboard ring
	  handling of duplicate items.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on clipboard ring
	  and completion window now closes when switching the desktop.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 363327 - Too
	  many undo steps needed to remove a new line.

2008-02-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Enable clipboard and
	  undo commands only when the editor window has the focus.

2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Add binding for delete