@@ -32,6 +32,7 @@ using Gtk;
 
 using MonoDevelop.Core;
 using MonoDevelop.Ide.Gui;
+using Mono.TextEditor;
 
 namespace MonoDevelop.SourceEditor
 {
@@ -105,6 +106,12 @@ namespace MonoDevelop.SourceEditor
 				if (!SearchWidget.inSearchUpdate) {
 					SearchWidget.searchPattern = SearchPattern;
 					SearchWidget.FireSearchPatternChanged ();
+				}
+				SearchResult result = widget.TextEditor.SearchForward (widget.TextEditor.Caret.Offset);
+				if (result == null && !String.IsNullOrEmpty (SearchPattern)) {
+					this.entrySearch.Entry.ModifyBase (Gtk.StateType.Normal, GotoLineNumberWidget.errorColor);
+				} else {
+					this.entrySearch.Entry.ModifyBase (Gtk.StateType.Normal, Style.Base (Gtk.StateType.Normal));
 				}
 			};
 			this.entrySearch.Entry.Activated += delegate {
