@@ -1,5 +1,11 @@
 2008-02-22  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
+	  MonoDevelop.SourceEditor/SearchWidget.cs: Search error removed, when
+	  pattern is empty
+
+2008-02-22  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: swapped search wrap
 	  messages.
 
